add AFQ crud
