# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\AfqController;
 use App\Http\Controllers\Api\CategoryController;
 use App\Http\Controllers\Api\ProductController;
 use App\Http\Controllers\Api\UserController;
@@ -32,19 +33,27 @@ Route::resource('product', ProductController::class)->only(['index', 'show'])
 Route::resource('category', CategoryController::class)->only(['index', 'show'])
     ->names(['index' => 'category.index', 'show' => 'category.show']);
 
+//   AFQ
+Route::resource('afq', AfqController::class)->only(['index', 'show'])
+    ->names(['index' => 'afq.index', 'show' => 'afq.show']);
+
+Route::post('user', [UserController::class, 'store']);
+
 Route::group(["middleware" => ["auth:sanctum"]], function () {
 
     Route::get('logout', [AuthController::class, 'logout']);
     Route::get('authenticate', [AuthController::class, 'authenticate']);
 
-    Route::post('user', [UserController::class, 'store']);
-
 //    PRODUCT
     Route::resource('product', ProductController::class)->only(['store', 'update', 'destroy'])
         ->names(['store' => 'product.store', 'update' => 'product.update', 'destroy' => 'product.destroy']);
 
-    //    PRODUCT
+    //    CATEGORY
     Route::resource('category', CategoryController::class)->only(['store', 'update', 'destroy'])
         ->names(['store' => 'category.store', 'update' => 'category.update', 'destroy' => 'category.destroy']);
+
+    //    AFQ
+    Route::resource('afq', AfqController::class)->only(['store', 'update', 'destroy'])
+        ->names(['store' => 'afq.store', 'update' => 'afq.update', 'destroy' => 'afq.destroy']);
 
 });
